fix: modal elements arrangement properly aligned

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
+* {
+  /* border: 1px solid red; */
+}
+
 html, body {
   height: 100%;
 }
@@ -20,6 +25,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+  display: flex;
+  gap: 10px;
 }
 
 .icon {
@@ -33,6 +41,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1;
+}
+
+.left-side {
+  flex: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.header {
+  font-weight: bold;
 }
 
 .close-button {
@@ -48,6 +67,11 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.text {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 button {
@@ -66,4 +90,10 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.question-and-icon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
